--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
 {
-  "name": "foo"
+  "name": "foo",
+  "devDependencies": {
+    "rollup": "^2.33.2",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "typescript": "^4.0.5"
+  },
+  "scripts": {
+    "build": "rollup -c"
+  }
 }
